# PrimlockGIS

./: .gitignore  README.md  design.md  main.py  pyproject.toml
data/: initial_coords.csv
src/gis_app/: geometry.py  normalise_data.py
src/primelock_gis/: __init__.py  __main__.py
src/primelock_gis/app/: __init__.py  sample_points_workflow.py
src/primelock_gis/core/: __init__.py  geometry.py  load_data.py  model.py
src/primelock_gis/core/algorithms/: __init__.py  contour.py  grid.py  interpolation.py  smoothing.py  tin.py  topology.py
src/primelock_gis/core/models/: __init__.py  grid.py  tin.py  vector.py
src/primelock_gis/core/rendering/: __init__.py  renderer_base.py  scene.py  scene_builder.py  symbology.py  viewport.py  viewport_builder.py
src/primelock_gis/core/storage/: __init__.py  topology_export.py
src/primelock_gis/ui/: __init__.py
src/primelock_gis/ui/terminal/: __init__.py  app.py  canvas.py  capabilities.py  renderer2d.py
tests/: test_canvas.py  test_geometry_tin.py  test_grid_algorithms.py  test_grid_rendering.py  test_idw_value.py  test_load_data.py  test_points_to_tin_vertices.py  test_renderer2d.py  test_terminal_capabilities.py  test_tin.py  test_viewport.py  test_viewport_builder.py
