[project]
name = "primlockgis"
version = "0.1.0"
description = "A lightweight terminal-based GIS prototype."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "polars>=1.40.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"